logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-01T200000+0000/task_id=Load_songplays_fact_table/attempt=3.log
[2025-07-24T13:47:06.666+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T20:00:00+00:00 [queued]>
[2025-07-24T13:47:06.675+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T20:00:00+00:00 [queued]>
[2025-07-24T13:47:06.676+0000] {taskinstance.py:2170} INFO - Starting attempt 3 of 4
[2025-07-24T13:47:06.693+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 20:00:00+00:00
[2025-07-24T13:47:06.709+0000] {standard_task_runner.py:60} INFO - Started process 230 to run task
[2025-07-24T13:47:06.712+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T20:00:00+00:00', '--job-id', '321', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpjl5afozd']
[2025-07-24T13:47:06.716+0000] {standard_task_runner.py:88} INFO - Job 321: Subtask Load_songplays_fact_table
[2025-07-24T13:47:06.794+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T20:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:47:06.862+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T20:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T20:00:00+00:00'
[2025-07-24T13:47:06.869+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:47:06.882+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T200000, start_date=20250724T134706, end_date=20250724T134706
[2025-07-24T13:47:06.895+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 321 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 230)
[2025-07-24T13:47:06.926+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:47:06.948+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T15:59:48.251+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T20:00:00+00:00 [queued]>
[2025-07-24T15:59:48.269+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T20:00:00+00:00 [queued]>
[2025-07-24T15:59:48.270+0000] {taskinstance.py:2170} INFO - Starting attempt 3 of 4
[2025-07-24T15:59:48.290+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 20:00:00+00:00
[2025-07-24T15:59:48.307+0000] {standard_task_runner.py:60} INFO - Started process 1444 to run task
[2025-07-24T15:59:48.315+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T20:00:00+00:00', '--job-id', '1263', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmphuwp4cd6']
[2025-07-24T15:59:48.322+0000] {standard_task_runner.py:88} INFO - Job 1263: Subtask Load_songplays_fact_table
[2025-07-24T15:59:48.445+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T20:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T15:59:48.568+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T20:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T20:00:00+00:00'
[2025-07-24T15:59:48.600+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 173, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert, 'songplays'),
  File "/opt/airflow/dags/etl_pipeline.py", line 132, in load_table
    cur.execute(f"INSERT INTO {table} {query}")
psycopg2.errors.UniqueViolation: duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.

[2025-07-24T15:59:48.620+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T200000, start_date=20250724T155948, end_date=20250724T155948
[2025-07-24T15:59:48.648+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1263 for task Load_songplays_fact_table (duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.
; 1444)
[2025-07-24T15:59:48.698+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T15:59:48.743+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
